website/versioned_docs/version-2.5/references/dotenv.md
---
id: version-2.5-dotenv
title: Install Helper Environment Variables
original_id: dotenv
---

Configuration in `$(bin/phenv --path)/.env`

Environment | Description | Optional
--- | --- | ---
`PRIMEHUB_DOMAIN`| Domain for user portal | No
`PRIMEHUB_SCHEME`| Scheme for user portal | No if `PRIMEHUB_FEATURE_USER_PORTAL` is enabled
`PRIMEHUB_PORT` | Port for user portal | Yes
`KC_DOMAIN`| Domain for external keycloak | No
`KC_SCHEME`| Scheme for external keycloak | No
`KC_PORT` |Port for external keycloak | Yes
`KC_USER` | Keycloak admin username | No
`KC_PASSWORD` | Keycloak admin password | No
`KC_DB_PASSWORD` | Keycloak DB password | Yes. default is `$KC_PASSWORD`
`KC_REALM` | Keycloak realm to install primehub | Yes. default is `primehub`
`PRIMEHUB_CONSOLE_DOCKER_USERNAME` | image pulling user for canner images. This is only used for development purpose | Yes
`PRIMEHUB_CONSOLE_DOCKER_PASSWORD` | image pulling password for canner images. | Yes
`PRIMEHUB_STORAGE_CLASS` | the default storage class of all RWO PVCs
`ADMIN_UI_GRAPHQL_SECRET_KEY` | The secret key for graphql. |No. Generated by `make init`
`HUB_AUTH_STATE_CRYPTO_KEY` | z2jh [auth state crypto key](https://zero-to-jupyterhub.readthedocs.io/en/latest/reference.html#auth-state-cryptokey)  | No. Generated by `make init`
`HUB_PROXY_SECRET_TOKEN` | z2jh [proxy secret token](https://zero-to-jupyterhub.readthedocs.io/en/latest/reference.html#proxy-secrettoken)| No. Generated by `make init`
`PRIMEHUB_AIRGAPPED` | If the cluster is in airgap environment | Yes. default is `false`
`PRIMEHUB_FEATURE_DATASET_UPLOAD` | If the dataset upload feature is enabled | Yes. default is `false`
`PRIMEHUB_FEATURE_JOB_SUBMISSION` | If the job submission feature is enabled | Yes. default is `false`

**The Environment Variables for Grafana**

Environment | Description | Optional
--- | --- | ---
`GRAFANA_SCHEME` | The url scheme of grafana | Yes. default is `$PH_SCHEME`
`GRAFANA_DOMAIN` | The url domain of grafana | No
`GRAFANA_KEYCLOAK_PROXY_CLIENT_SECRET` | The secret of keycloak client `grafana-proxy` | No

**The Environment Variables for Kibana**

Environment | Description | Optional
--- | --- | ---
`KIBANA_KEYCLOAK_PROXY_CLIENT_SECRET` | The secret of keycloak client `kibana-proxy` | No


**Deprecated**

Environment | Description
--- | --- 
`PRIMEHUB_FEATURE_USER_PORTAL` | If the user portal is enabled. Deprecated because it is enabled by default and cannot set it to false.
`PH_DOMAIN`| parent domain name for this installation. (e.g. `example.com`). Deprecated because user portal is enabled by default.
`PH_SCHEME`| http or https. Deprecated because the user portal is enabled by default.
`PH_PORT`| port. Deprecated because the user portal is enabled by default.
`ADMIN_UI_CLIENT_SECRET` | The secret of keycloak client `admin-ui`. Deprecated because the bootstrap script would get it from keycloak and put it to secret.
`HUB_CLIENT_SECRET` | The secret of keycloak client `jupyterhub`. Deprecated because the bootstrap script would get it from keycloak and put it to secret.

